add formulario cliente e check de status

--- a/errorJogo.html
+++ b/errorJogo.html
@@ -64,56 +64,7 @@
           <div class="sidebar-heading">Navegação</div>
   
           <!-- Nav Item - Pages Collapse Menu -->
-          <li class="nav-item">
-            <a
-              class="nav-link collapsed"
-              href="#"
-              data-toggle="collapse"
-              data-target="#collapsePages"
-              aria-expanded="true"
-              aria-controls="collapsePages"
-            >
-              <i class="fas fa-fw fa-folder"></i>
-              <span>Páginas</span>
-            </a>
-            <div
-              id="collapsePages"
-              class="collapse"
-              aria-labelledby="headingPages"
-              data-parent="#accordionSidebar"
-            >
-              <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Cliente</h6>
-                <a class="collapse-item" href="login.html">Login</a>
-                <a class="collapse-item" href="register.html">Register</a>
-                <h6 class="collapse-header">Produtos</h6>
-                <a class="collapse-item" href="cadastrar-produto.html"
-                  >Cadastrar produto</a
-                >
-                <a class="collapse-item" href="atualizar-produto.html"
-                  >Atualizar produto</a
-                >
-                <h6 class="collapse-header">Categorias</h6>
-                <a class="collapse-item" href="cadastrar-categoria.html"
-                >Cadastrar categorias</a
-              >
-              <a class="collapse-item" href="atualizar-categoria.html"
-              >Atualizar categorias</a
-            >
-                <h6 class="collapse-header">empresas</h6>
-                <a class="collapse-item" href="cadastrar-empresadev.html"
-                >Cadastrar empresas</a
-              >
-              <a class="collapse-item" href="atualizar-empresadev.html"
-              >Atualizar empresas</a
-            >
-                <div class="collapse-divider"></div>
-                <h6 class="collapse-header">Outros:</h6>
-                <a class="collapse-item" href="404.html">404 Page</a>
-                <a class="collapse-item" href="blank.html">Blank Page</a>
-              </div>
-            </div>
-          </li>
+  
   
           <li class="nav-item">
             <a
@@ -169,20 +120,9 @@
   
   
           <!-- Nav Item - Charts -->
-          <li class="nav-item">
-            <a class="nav-link" href="charts.html">
-              <i class="fas fa-fw fa-chart-area"></i>
-              <span>Charts</span></a
-            >
-          </li>
+  
   
           <!-- Nav Item - Tables -->
-          <li class="nav-item">
-            <a class="nav-link" href="tables.html">
-              <i class="fas fa-fw fa-table"></i>
-              <span>Tables</span></a
-            >
-          </li>
   
           <!-- Divider -->
           <hr class="sidebar-divider d-none d-md-block" />
@@ -409,9 +349,9 @@
 
                     <!-- 404 Error Text -->
                     <div class="text-center d-flex flex-column">
-                        <h1 class="text-success fs-1">Sucesso!</h1>
-                        <a class='fs-5' href="form-jogo1.html">&larr; Clique aqui para cadastrar outro jogo</a>
-                        <a href="lista-jogo.html">&larr; Clique aqui para ver a lista de jogos</a>
+                        <h1 class="text-danger fs-1">Erro na requisição :( </h1>
+                        <p>A requisição não foi enviada de forma correta para o servidor.</p>
+                        <a href="form-jogo1.html">&larr; Clique aqui para tentar novamente</a>
 
                     </div>
 
@@ -425,7 +365,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2020</span>
+                        <span>Projeto sem fins lucrativos - Kaique Santana</span>
                     </div>
                 </div>
             </footer>
