--- a/form-jogo1.html
+++ b/form-jogo1.html
@@ -68,56 +68,7 @@
         <div class="sidebar-heading">Navegação</div>
 
         <!-- Nav Item - Pages Collapse Menu -->
-        <li class="nav-item">
-          <a
-            class="nav-link collapsed"
-            href="#"
-            data-toggle="collapse"
-            data-target="#collapsePages"
-            aria-expanded="true"
-            aria-controls="collapsePages"
-          >
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Páginas</span>
-          </a>
-          <div
-            id="collapsePages"
-            class="collapse"
-            aria-labelledby="headingPages"
-            data-parent="#accordionSidebar"
-          >
-            <div class="bg-white py-2 collapse-inner rounded">
-              <h6 class="collapse-header">Cliente</h6>
-              <a class="collapse-item" href="login.html">Login</a>
-              <a class="collapse-item" href="register.html">Register</a>
-              <h6 class="collapse-header">Produtos</h6>
-              <a class="collapse-item" href="cadastrar-produto.html"
-                >Cadastrar produto</a
-              >
-              <a class="collapse-item" href="atualizar-produto.html"
-                >Atualizar produto</a
-              >
-              <h6 class="collapse-header">Categorias</h6>
-              <a class="collapse-item" href="cadastrar-categoria.html"
-              >Cadastrar categorias</a
-            >
-            <a class="collapse-item" href="atualizar-categoria.html"
-            >Atualizar categorias</a
-          >
-              <h6 class="collapse-header">empresas</h6>
-              <a class="collapse-item" href="cadastrar-empresadev.html"
-              >Cadastrar empresas</a
-            >
-            <a class="collapse-item" href="atualizar-empresadev.html"
-            >Atualizar empresas</a
-          >
-              <div class="collapse-divider"></div>
-              <h6 class="collapse-header">Outros:</h6>
-              <a class="collapse-item" href="404.html">404 Page</a>
-              <a class="collapse-item" href="blank.html">Blank Page</a>
-            </div>
-          </div>
-        </li>
+
 
         <li class="nav-item">
           <a
@@ -173,20 +124,9 @@
 
 
         <!-- Nav Item - Charts -->
-        <li class="nav-item">
-          <a class="nav-link" href="charts.html">
-            <i class="fas fa-fw fa-chart-area"></i>
-            <span>Charts</span></a
-          >
-        </li>
+
 
         <!-- Nav Item - Tables -->
-        <li class="nav-item">
-          <a class="nav-link" href="tables.html">
-            <i class="fas fa-fw fa-table"></i>
-            <span>Tables</span></a
-          >
-        </li>
 
         <!-- Divider -->
         <hr class="sidebar-divider d-none d-md-block" />
@@ -522,20 +462,18 @@
                                     type="text"
                                     class="form-control form-control-user rounded-0"
                                     id="tituloJogo"
-                                    aria-describedby="tituloHelp"
-                                    placeholder="Título do Jogo"required />
-                                    <label for="tituloJogo" class="pl-4">Titulo</label>
-                                  </div>
-                                  
+                                    placeholder="Titulo do Jogo"
+                                    />
+                                    <label for="tituloJogo" class="pl-4">Titulo do jogo</label>
+                                  </div>                                  
                                   <div class="form-floating col-sm-4 ">
                                     <input
                                     type="number"
                                     class="form-control form-control-user rounded-0"
                                     id="precoJogo"
                                     placeholder="Preço do jogo"
-                                    required
                                     />
-                                    <label for="floatingPassword" class="pl-4">Preço</label>
+                                    <label for="precoJogo" class="pl-4">Preço</label>
                                   </div>
                                 </div>
 
@@ -545,7 +483,6 @@
                                     style="height: 100%"
                                     class="form-control form-control-user rounded-0"
                                     id="descricaoJogo"
-                                    required
                                     placeholder="Descrição do Jogo"></textarea>
                                     <label for="descricaoJogo">Descrição do jogo</label>
                                   </div>
@@ -555,7 +492,7 @@
                                       class="form-control p-4 form-control-user rounded-0 my-3"
                                       id="imagemJogo"
                                       placeholder="Imagem do jogo"
-                                      required
+
                                     />
                                   </div>
                               </div> 
@@ -567,7 +504,7 @@
                               </div>
                             
                               <div style="text-align:center;margin-top:40px;">
-                                <span class="step" style="background-color: #4c5caf;"></span>
+                                <span class="step" style="background-color: #4157c6;"></span>
                                 <span class="step"></span>
                                 <span class="step"></span>
                               </div>
@@ -591,7 +528,7 @@
         <footer class="sticky-footer bg-white">
           <div class="container my-auto">
             <div class="copyright text-center my-auto">
-              <span>Copyright &copy; Your Website 2020</span>
+              <span>Projeto sem fins lucrativos - Kaique Santana</span>
             </div>
           </div>
         </footer>
