--- a/form-jogo2.html
+++ b/form-jogo2.html
@@ -68,56 +68,7 @@
         <div class="sidebar-heading">Navegação</div>
 
         <!-- Nav Item - Pages Collapse Menu -->
-        <li class="nav-item">
-          <a
-            class="nav-link collapsed"
-            href="#"
-            data-toggle="collapse"
-            data-target="#collapsePages"
-            aria-expanded="true"
-            aria-controls="collapsePages"
-          >
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Páginas</span>
-          </a>
-          <div
-            id="collapsePages"
-            class="collapse"
-            aria-labelledby="headingPages"
-            data-parent="#accordionSidebar"
-          >
-            <div class="bg-white py-2 collapse-inner rounded">
-              <h6 class="collapse-header">Cliente</h6>
-              <a class="collapse-item" href="login.html">Login</a>
-              <a class="collapse-item" href="register.html">Register</a>
-              <h6 class="collapse-header">Produtos</h6>
-              <a class="collapse-item" href="cadastrar-produto.html"
-                >Cadastrar produto</a
-              >
-              <a class="collapse-item" href="atualizar-produto.html"
-                >Atualizar produto</a
-              >
-              <h6 class="collapse-header">Categorias</h6>
-              <a class="collapse-item" href="cadastrar-categoria.html"
-              >Cadastrar categorias</a
-            >
-            <a class="collapse-item" href="atualizar-categoria.html"
-            >Atualizar categorias</a
-          >
-              <h6 class="collapse-header">empresas</h6>
-              <a class="collapse-item" href="cadastrar-empresadev.html"
-              >Cadastrar empresas</a
-            >
-            <a class="collapse-item" href="atualizar-empresadev.html"
-            >Atualizar empresas</a
-          >
-              <div class="collapse-divider"></div>
-              <h6 class="collapse-header">Outros:</h6>
-              <a class="collapse-item" href="404.html">404 Page</a>
-              <a class="collapse-item" href="blank.html">Blank Page</a>
-            </div>
-          </div>
-        </li>
+
 
         <li class="nav-item">
           <a
@@ -173,20 +124,9 @@
 
 
         <!-- Nav Item - Charts -->
-        <li class="nav-item">
-          <a class="nav-link" href="charts.html">
-            <i class="fas fa-fw fa-chart-area"></i>
-            <span>Charts</span></a
-          >
-        </li>
+
 
         <!-- Nav Item - Tables -->
-        <li class="nav-item">
-          <a class="nav-link" href="tables.html">
-            <i class="fas fa-fw fa-table"></i>
-            <span>Tables</span></a
-          >
-        </li>
 
         <!-- Divider -->
         <hr class="sidebar-divider d-none d-md-block" />
@@ -517,7 +457,7 @@
                               <div class="tab form-group">
                                 <h4 class="text-center">Informações de Jogabilidade</h4>
                                 <div class="form-floating mb-3">
-                                  <select class="form-select" id="modoJogo" required>
+                                  <select class="form-select" id="modoJogo">
                                     <option value="single-player">Single-player</option>
                                     <option value="multi-player">Multi-player</option>
                                     <option value="Ambos">Single-player e multi-player</option>
@@ -525,7 +465,7 @@
                                   <label for="modoJogo">Seleção de modo de jogo</label>
                                 </div>
                                 <div class="form-floating mb-3">
-                                  <select class="form-select" id="plataformaJogo" required>
+                                  <select class="form-select" id="plataformaJogo">
                                     <option value="pc">PC</option>
                                     <option value="playstation">Playstation</option>
                                     <option value="xbox">X-Box</option>
@@ -534,7 +474,7 @@
                                   <label for="plataformaJogo">Seleção de plataformas</label>
                                 </div>
                                 <div class="form-floating mb-3">
-                                  <select class="form-select" id="crossPlataforma" required>
+                                  <select class="form-select" id="crossPlataforma">
                                     <option value="Sim">Sim</option>
                                     <option value="Não">Não</option>
                                   </select>
@@ -547,7 +487,7 @@
                                   style="height: 100%"
                                   class="form-control form-control-user rounded-0"
                                   id="requisitosJogo"
-                                  placeholder="Requisitos de hardware" required></textarea>
+                                  placeholder="Requisitos de hardware"></textarea>
                                   <label for="requisitosJogo">Requisitos mínimos de hardware</label>
                                 </div>
 
@@ -586,7 +526,7 @@
         <footer class="sticky-footer bg-white">
           <div class="container my-auto">
             <div class="copyright text-center my-auto">
-              <span>Copyright &copy; Your Website 2020</span>
+              <span>Projeto sem fins lucrativos - Kaique Santana</span>
             </div>
           </div>
         </footer>
