--- a/lista-cliente.html
+++ b/lista-cliente.html
@@ -353,33 +353,21 @@
                         <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                             <thead>
                                 <tr>
-                                    <th>Título</th>
-                                    <th>Preço</th>
-                                    <th>Descrição</th>
-                                    <th>Modo de jogo</th>
-                                    <th>Plataforma</th>
-                                    <th>Cross-plataforma</th>
-                                    <th>Requisito hardware</th>
-                                    <th>Data lançamento</th>
-                                    <th>Classificação etária</th>
-                                    <th>Idioma</th>
-                                    <th>Fabricante</th>
+                                    <th>Nome</th>
+                                    <th>Sobrenome</th>
+                                    <th>Email</th>
+                                    <th>Telefone</th>
+                                    <th>CEP</th>
                                     <th>Opções</th>
                                 </tr>
                             </thead>
                             <tfoot>
                                 <tr>
-                                    <th>Título</th>
-                                    <th>Preço</th>
-                                    <th>Descrição</th>
-                                    <th>Modo de jogo</th>
-                                    <th>Plataforma</th>
-                                    <th>Cross-plataforma</th>
-                                    <th>Requisito hardware</th>
-                                    <th>Data lançamento</th>
-                                    <th>Classificação etária</th>
-                                    <th>Idioma</th>
-                                    <th>Fabricante</th>
+                                    <th>Nome</th>
+                                    <th>Sobrenome</th>
+                                    <th>Email</th>
+                                    <th>Telefone</th>
+                                    <th>CEP</th>
                                     <th style="display: none">Opções</th>
                                 </tr>
                             </tfoot>
@@ -450,7 +438,7 @@
 
     <!-- Page level custom scripts -->
     <script src="js/demo/datatables-demo.js"></script>
-    <script src="./scripts/scriptsJogo/tabelaJogos.js" type="module"></script>
+    <script src="./scripts/scriptsCliente/tabelaClientes.js" type="module"></script>
 
 </body>
 
