--- a/blank.html
+++ b/blank.html
@@ -29,206 +29,109 @@
     <!-- Page Wrapper -->
 
     <div id="wrapper">
-        <!-- Sidebar -->
-        <ul
-          class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion"
-          id="accordionSidebar"
+      <!-- Sidebar -->
+      <ul
+        class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion"
+        id="accordionSidebar"
+      >
+        <!-- Sidebar - Brand -->
+        <a
+          class="sidebar-brand d-flex align-items-center justify-content-center"
+          href="index.html"
         >
-          <!-- Sidebar - Brand -->
-          <a
-            class="sidebar-brand d-flex align-items-center justify-content-center"
-            href="index.html"
-          >
-            <div class="sidebar-brand-icon rotate-n-15">
-              <img src="./img/file (1).png" style="width: 75px" />
-            </div>
-            <div class="sidebar-brand-text mx-3">KAIQUE STORE</div>
-          </a>
-  
-          <!-- Divider -->
-          <hr class="sidebar-divider my-0" />
-  
-          <!-- Nav Item - Dashboard -->
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">
-              <i class="fas fa-fw fa-tachometer-alt"></i>
-              <span>Dashboard</span></a
-            >
-          </li>
-  
-          <!-- Divider -->
-          <hr class="sidebar-divider" />
-  
-          <!-- Heading -->
-          <div class="sidebar-heading">Interface</div>
-  
-          <!-- Nav Item - Pages Collapse Menu -->
-          <li class="nav-item">
-            <a
-              class="nav-link collapsed"
-              href="#"
-              data-toggle="collapse"
-              data-target="#collapseTwo"
-              aria-expanded="true"
-              aria-controls="collapseTwo"
-            >
-              <i class="fas fa-fw fa-cog"></i>
-              <span>Components</span>
-            </a>
-            <div
-              id="collapseTwo"
-              class="collapse"
-              aria-labelledby="headingTwo"
-              data-parent="#accordionSidebar"
-            >
-              <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Custom Components:</h6>
-                <a class="collapse-item" href="buttons.html">Buttons</a>
-                <a class="collapse-item" href="cards.html">Cards</a>
-              </div>
-            </div>
-          </li>
-  
-          <!-- Nav Item - Utilities Collapse Menu -->
-          <li class="nav-item">
-            <a
-              class="nav-link collapsed"
-              href="#"
-              data-toggle="collapse"
-              data-target="#collapseUtilities"
-              aria-expanded="true"
-              aria-controls="collapseUtilities"
-            >
-              <i class="fas fa-fw fa-wrench"></i>
-              <span>Utilities</span>
-            </a>
-            <div
-              id="collapseUtilities"
-              class="collapse"
-              aria-labelledby="headingUtilities"
-              data-parent="#accordionSidebar"
-            >
-              <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Custom Utilities:</h6>
-                <a class="collapse-item" href="utilities-color.html">Colors</a>
-                <a class="collapse-item" href="utilities-border.html">Borders</a>
-                <a class="collapse-item" href="utilities-animation.html"
-                  >Animations</a
-                >
-                <a class="collapse-item" href="utilities-other.html">Other</a>
-              </div>
-            </div>
-          </li>
-  
-          <!-- Divider -->
-          <hr class="sidebar-divider" />
-  
-          <!-- Heading -->
-          <div class="sidebar-heading">Navegação</div>
-  
-          <!-- Nav Item - Pages Collapse Menu -->
-          <li class="nav-item">
-            <a
-              class="nav-link collapsed"
-              href="#"
-              data-toggle="collapse"
-              data-target="#collapsePages"
-              aria-expanded="true"
-              aria-controls="collapsePages"
-            >
-              <i class="fas fa-fw fa-folder"></i>
-              <span>Páginas</span>
-            </a>
-            <div
-              id="collapsePages"
-              class="collapse"
-              aria-labelledby="headingPages"
-              data-parent="#accordionSidebar"
-            >
-              <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Cliente</h6>
-                <a class="collapse-item" href="login.html">Login</a>
-                <a class="collapse-item" href="register.html">Register</a>
-                <h6 class="collapse-header">Produtos</h6>
-                <a class="collapse-item" href="cadastrar-produto.html"
-                  >Cadastrar produto</a
-                >
-                <a class="collapse-item" href="atualizar-produto.html"
-                  >Atualizar produto</a
-                >
-                <h6 class="collapse-header">Categorias</h6>
-                <a class="collapse-item" href="cadastrar-categoria.html"
-                >Cadastrar categorias</a
-              >
-              <a class="collapse-item" href="atualizar-categoria.html"
-              >Atualizar categorias</a
-            >
-                <h6 class="collapse-header">Desenvolvedoras</h6>
-                <a class="collapse-item" href="cadastrar-empresadev.html"
-                >Cadastrar desenvolvedoras</a
-              >
-              <a class="collapse-item" href="atualizar-empresadev.html"
-              >Atualizar desenvolvedoras</a
-            >
-                <div class="collapse-divider"></div>
-                <h6 class="collapse-header">Outros:</h6>
-                <a class="collapse-item" href="404.html">404 Page</a>
-                <a class="collapse-item" href="blank.html">Blank Page</a>
-              </div>
-            </div>
-          </li>
-  
-          <li class="nav-item">
-            <a
-              class="nav-link collapsed"
-              href="#"
-              data-toggle="collapse"
-              data-target="#collapsePages2"
-              aria-expanded="true"
-              aria-controls="collapsePages"
-            >
-            <i class="fas fa-fw fa-table"></i>  
-              <span>Tabelas</span>
-            </a>
-            <div
-              id="collapsePages2"
-              class="collapse"
-              aria-labelledby="headingPages"
-              data-parent="#accordionSidebar"
-            >
-              <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Cliente</h6>
-                <a class="collapse-item" href="login.html">Clientes</a>
-                <a class="collapse-item" href="register.html">Jogos</a>
-                <a class="collapse-item" href="cadastrar-produto.html">Categorias</a>
-                <a class="collapse-item" href="atualizar-produto.html">Atualizar produto</a>
-            </div>
-          </li>
-  
-          <!-- Nav Item - Charts -->
-          <li class="nav-item">
-            <a class="nav-link" href="charts.html">
-              <i class="fas fa-fw fa-chart-area"></i>
-              <span>Charts</span></a
-            >
-          </li>
-  
-          <!-- Nav Item - Tables -->
-          <li class="nav-item">
-            <a class="nav-link" href="tables.html">
-              <i class="fas fa-fw fa-table"></i>
-              <span>Tables</span></a
-            >
-          </li>
-  
-          <!-- Divider -->
-          <hr class="sidebar-divider d-none d-md-block" />
-  
-          <!-- Sidebar Toggler (Sidebar) -->
-          <div class="text-center d-none d-md-inline">
-            <button class="rounded-circle border-0" id="sidebarToggle"></button>
+          <div class="sidebar-brand-icon rotate-n-15">
+            <img src="./img/file (1).png" style="width: 75px" />
           </div>
-        </ul>
+          <div class="sidebar-brand-text mx-3">KAIQUE STORE</div>
+        </a>
+
+        <!-- Divider -->
+        <hr class="sidebar-divider my-0" />
+
+        <!-- Nav Item - Dashboard -->
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">
+            <i class="fas fa-fw fa-tachometer-alt"></i>
+            <span>Dashboard</span></a
+          >
+        </li>
+
+
+        <!-- Divider -->
+        <hr class="sidebar-divider" />
+
+        <!-- Heading -->
+        <div class="sidebar-heading">Navegação</div>
+
+        <!-- Nav Item - Pages Collapse Menu -->
+
+
+        <li class="nav-item">
+          <a
+            class="nav-link collapsed"
+            href="#"
+            data-toggle="collapse"
+            data-target="#collapsePages2"
+            aria-expanded="true"
+            aria-controls="collapsePages"
+          >
+          <i class="fas fa-fw fa-user"></i>  
+            <span>Clientes</span>
+          </a>
+          <div
+            id="collapsePages2"
+            class="collapse"
+            aria-labelledby="headingPages"
+            data-parent="#accordionSidebar"
+          >
+            <div class="bg-white py-2 collapse-inner rounded">
+              <h6 class="collapse-header">Cliente</h6>
+              <a class="collapse-item" href="login.html">Cadastrar cliente</a>
+              <a class="collapse-item" href="lista-cliente.html">Lista clientes</a>
+          </div>
+          </div>
+        </li>
+
+        <li class="nav-item">
+          <a
+            class="nav-link collapsed"
+            href="#"
+            data-toggle="collapse"
+            data-target="#collapsePagesJogos"
+            aria-expanded="true"
+            aria-controls="collapsePages"
+          >
+          <i class="fas fa-fw fa-gamepad"></i>  
+            <span>Jogos</span>
+          </a>
+          <div
+            id="collapsePagesJogos"
+            class="collapse"
+            aria-labelledby="headingPages"
+            data-parent="#accordionSidebar"
+          >
+            <div class="bg-white py-2 collapse-inner rounded">
+              <h6 class="collapse-header">Jogos</h6>
+              <a class="collapse-item" href="form-jogo1.html">Cadastrar jogos</a>
+              <a class="collapse-item" href="lista-jogo.html">Lista de jogos</a>
+          </div>
+          </div>
+        </li>
+
+
+        <!-- Nav Item - Charts -->
+
+
+        <!-- Nav Item - Tables -->
+
+        <!-- Divider -->
+        <hr class="sidebar-divider d-none d-md-block" />
+
+        <!-- Sidebar Toggler (Sidebar) -->
+        <div class="text-center d-none d-md-inline">
+          <button class="rounded-circle border-0" id="sidebarToggle"></button>
+        </div>
+      </ul>
         <!-- End of Sidebar -->
 
         <!-- Content Wrapper -->
@@ -241,7 +144,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2020</span>
+                        <span>Projeto sem fins lucrativos - Kaique Santana</span>
                     </div>
                 </div>
             </footer>
