--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           >
             <div class="bg-white py-2 collapse-inner rounded">
               <h6 class="collapse-header">Cliente</h6>
-              <a class="collapse-item" href="login.html">Cadastrar cliente</a>
+              <a class="collapse-item" href="form-cliente.html">Cadastrar cliente</a>
               <a class="collapse-item" href="lista-cliente.html">Lista clientes</a>
           </div>
           </div>
@@ -624,7 +624,7 @@
         <footer class="sticky-footer bg-white">
           <div class="container my-auto">
             <div class="copyright text-center my-auto">
-              <span>Copyright &copy; Your Website 2021</span>
+              <span>Projeto sem fins lucrativos - Kaique Santana</span>
             </div>
           </div>
         </footer>
@@ -633,6 +633,7 @@
       <!-- End of Content Wrapper -->
     </div>
     <!-- End of Page Wrapper -->
+    </div>
 
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top">
