--- a/successJogo.html
+++ b/successJogo.html
@@ -9,20 +9,19 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Tables</title>
+    <title>SB Admin 2 - 404</title>
 
-    <!-- Custom fonts for this template -->
+    <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/listaJogo.css">
+    <!-- Custom styles for this template-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <!-- Custom styles for this page -->
-    <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 
 </head>
 
@@ -145,11 +144,9 @@
                 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
                     <!-- Sidebar Toggle (Topbar) -->
-                    <form class="form-inline">
-                        <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-                            <i class="fa fa-bars"></i>
-                        </button>
-                    </form>
+                    <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+                        <i class="fa fa-bars"></i>
+                    </button>
 
                     <!-- Topbar Search -->
                     <form
@@ -349,44 +346,15 @@
 
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
-                    <div class="table-responsive">
-                        <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                            <thead>
-                                <tr>
-                                    <th>Título</th>
-                                    <th>Preço</th>
-                                    <th>Descrição</th>
-                                    <th>Modo de jogo</th>
-                                    <th>Plataforma</th>
-                                    <th>Cross-plataforma</th>
-                                    <th>Requisito hardware</th>
-                                    <th>Data lançamento</th>
-                                    <th>Classificação etária</th>
-                                    <th>Idioma</th>
-                                    <th>Fabricante</th>
-                                    <th>Opções</th>
-                                </tr>
-                            </thead>
-                            <tfoot>
-                                <tr>
-                                    <th>Título</th>
-                                    <th>Preço</th>
-                                    <th>Descrição</th>
-                                    <th>Modo de jogo</th>
-                                    <th>Plataforma</th>
-                                    <th>Cross-plataforma</th>
-                                    <th>Requisito hardware</th>
-                                    <th>Data lançamento</th>
-                                    <th>Classificação etária</th>
-                                    <th>Idioma</th>
-                                    <th>Fabricante</th>
-                                    <th style="display: none">Opções</th>
-                                </tr>
-                            </tfoot>
-                            <tbody id="body-table">
-                            </tbody>
-                        </table>
+
+                    <!-- 404 Error Text -->
+                    <div class="text-center d-flex flex-column">
+                        <h1 class="text-success fs-1">Sucesso!</h1>
+                        <a class='fs-5' href="form-jogo1.html">&larr; Clique aqui para cadastrar outro jogo</a>
+                        <a href="lista-jogo.html">&larr; Clique aqui para ver a lista de jogos</a>
+
                     </div>
+
                 </div>
                 <!-- /.container-fluid -->
 
@@ -443,14 +411,6 @@
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
-
-    <!-- Page level plugins -->
-    <script src="vendor/datatables/jquery.dataTables.min.js"></script>
-    <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
-
-    <!-- Page level custom scripts -->
-    <script src="js/demo/datatables-demo.js"></script>
-    <script src="./scripts/scriptsJogo/tabelaJogos.js" type="module"></script>
 
 </body>
 
